# workspace-tools

./: .changes.json  .config.toml  .gitattributes  AI_RESEARCH.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  E2E_COVERAGE_GAP_ANALYSIS.md  E2E_TEST_PLAN.md  FINDINGS.md  IMPLEMENTATION_STATUS.md  PLAN_WORKSPACE.md  PROMPT.md  PlanoDeBatalha.md  README.md  REFACTOR-STORY-2.2.md  RELEASE.md  REPOSITORY_CONFIG_GUIDE.md  cliff.toml  cspell.json  dist-workspace.toml  justfile  package.json  pnpm-lock.yaml  release-plz.toml  tsconfig.json
crates/binding/: Cargo.toml
crates/binding/src/: binding_changes.rs  binding_command.rs  binding_config.rs  binding_git.rs  binding_manager.rs  binding_package.rs  binding_paths.rs  binding_workspace.rs  bump.rs  errors.rs  lib.rs
crates/cli/: CHANGELOG.md  CLI.md  Cargo.toml  PLAN.md  PRD.md  README.md  STORY_3.4_COMPLETION.md  STORY_MAP.md  build.rs  todo.md
crates/cli/assets/: default_config.toml
crates/cli/docs/: CLI.md  COMMANDS.md  GUIDE.md  PLAN.md  PRD.md  STORY_MAP.md
crates/cli/examples/: logging_example.rs  table_example.rs
crates/cli/scripts/: README.md  generate-command-docs.sh  generate_command_docs.rs
crates/cli/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  utils.rs
crates/cli/tests/: bump_execute_integration.rs  e2e_audit.rs  e2e_bump.rs  e2e_changes.rs  e2e_changeset.rs  e2e_clone.rs  e2e_config.rs  e2e_init.rs  e2e_upgrade.rs  e2e_version.rs
crates/git/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
crates/git/src/: error.rs  lib.rs  repo.rs  tests.rs  types.rs
crates/git/tests/: git_repo.rs  repo_tests.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: error.rs  hook.rs  lib.rs  package.rs  pre_commit.rs
crates/hooks/tests/: error_test.rs  package_test.rs  pre_commit_test.rs
crates/monorepo/: ARCHITECTURE.md  Cargo.toml  MIGRATION_GUIDE.md  Plan.md  README.md  REFACTORING_PLAN.md  REFACTORING_ROADMAP.md  Research-Overview.md  SPEC.md  TODO.md
crates/monorepo/examples/: automated_workflow_example.rs  change_detection_config.yaml  debug_analysis.rs  debug_orphaned.rs  performance_test.rs  quick_start.rs  real_example_usage.rs
crates/monorepo/src/: changes.rs  config.rs  conventional.rs  lib.rs  test.rs  workspace.rs
crates/monorepo/tests/: analysis_tests.rs  change_detection_integration.rs  change_detection_tests.rs  change_store_test.rs  change_tracker_test.rs  changelog_test.rs  changes_change_test.rs  changes_environment_test.rs  changes_file_store_test.rs  changes_management_integration_test.rs  changes_memory_store_test.rs  changes_model_test.rs  changes_test.rs  changes_tracker_test.rs  changeset_test.rs  complex_monorepo_integration.rs  config_components_integration.rs  config_tests.rs  conflict_recovery_integration.rs  core_project_integration.rs  core_tests.rs  dependency_analysis_test.rs  end_to_end_integration.rs  error_tests.rs  hooks_integration.rs  lib.rs  monorepo_analysis_integration.rs  monorepo_changes.rs  monorepo_config.rs  monorepo_workspace.rs  package_discovery_test.rs  performance_stress_integration.rs  simultaneous_changes_integration.rs  storage_manager_validation_integration.rs  task_workflow_error_integration.rs  tasks_core_test.rs  tasks_graph_test.rs  test_advanced_resource_monitoring.rs  test_automated_stress_system_validation.rs  test_automatic_breaking_point_detection.rs  (+50 more)
crates/monorepo/tests_backup/: changes_changeset_test.rs  changes_file_store_test.rs  changes_management_integration_test.rs  tasks_runner_integration_test.rs  versioning_bump_test.rs  versioning_strategy_test.rs  versioning_suggest_test.rs  workspace_package_relationships_test.rs  workspace_package_sorting_test.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/pkg/: ANALISE_REGISTRY_ATUAL.md  AS_REF_IMPLEMENTATION.md  Analysis.md  CHANGELOG.md  CONCEPT.md  CONSOLIDATION_PLAN.md  Cargo.toml  DECISIONS.md  DESIGN_3_SERVICOS_SRP.md  ERROR_REFACTOR_SUMMARY.md  MIGRATION_PLAN_DETALHADO.md  PLAN.md  Plan.md  README.md  ROADMAP_DETALHADO_FASE2.md  SINGLE_REPO_MONOREPO_FIX.md  SPEC.md  SPRINT_TODO.md  STORY_1_3_VERIFICATION.md  STORY_1_4_FIX_SUMMARY.md  STORY_1_4_SUMMARY.md  STORY_MAP.md  THREAD_SAFETY_AUDIT.md  VALIDATION_SETUP.md
crates/pkg/docs/: API_COMPARISON.md  API_REFACTORING.md  AUDIT_REPORT.md  CHANGESET_BUILDER_ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCY_GRAPH.md  DEPENDENCY_VERSION_FIX.md  IMPLEMENTATION_AUDIT_REPORT.md  IMPLEMENTATION_PHASE1_2.md  INTEGRATION_TEST_ANALYSIS.md  MIGRATION_GUIDE_V2.md  REFACTORING_SUMMARY.md  RESUMO_FASE1_2.md  STORY-5.3-COMPLETE.md  STORY-5.5-COMPLETE.md  STORY-5.8-COMPLETE.md  STORY_1.3_SUMMARY.md  STORY_10.2_CHECKLIST.md  STORY_10.2_SUMMARY.md  STORY_2.3_SUMMARY.md  STORY_2_4_SUMMARY.md  STORY_5.6_CHECKLIST.md  STORY_5.6_SUMMARY.md  STORY_6.5_SUMMARY.md  STORY_7_4_IMPLEMENTATION.md  STORY_8.10_SUMMARY.md  STORY_8.5_CHECKLIST.md  STORY_8.5_SUMMARY.md  story-4.3-implementation.md  story-5.3-implementation.md  story-9.1-implementation.md  story-9.2-implementation.md  type_relationships.md
crates/pkg/examples/: README.md  audit_report_formatting.rs  basic-config.toml  changeset_examples.rs  changeset_storage.rs  config_examples.rs  config_integration.rs  conventional_commits.rs  dependency_graph_example.rs  dependency_version_tracking_example.rs  download_package.rs  env_override.rs  error_as_ref.rs  load_config.rs  minimal-config.toml  monorepo-config.toml  snapshot_version.rs  version_resolver_example.rs
crates/pkg/src/: bump.rs  dependency.rs  error.rs  lib.rs  package.rs  version.rs
crates/pkg/tests/: AUDIT_INTEGRATION_TESTS.md  README.md  audit_integration.rs  bump_tests.rs  changeset_storage_integration.rs  dependency_core_tests.rs  dependency_graph_tests.rs  dependency_test.rs  dependency_tests.rs  diff_tests.rs  error_tests.rs  graph_tests.rs  package_diff_tests.rs  package_info_tests.rs  package_tests.rs  pkg_dependency.rs  pkg_diff.rs  pkg_error.rs  pkg_package.rs  pkg_upgrader.rs  pkg_version.rs  real_world_test.rs  real_world_usage.rs  (+11 more)
crates/standard/: Analysis.md  CHANGELOG.md  Cargo.toml  Plan.md  README.md  SPEC.md
(+817 files in other folders)
