[workspace]
members = ["crates/standard"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["WebSublime"]
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
repository = "https://github.com/websublime/workspace-node-tools"

[workspace.dependencies]
# Internal crates
#sublime_standard_tools = { version = "0.1.0", path = "./crates/standard" }

# Core dependencies
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["debug"] }
dirs = "6.0.0"
log = "0.4.20"
mimalloc = "0.1.42"
regex = "1.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.8.1"
thiserror = "1.0.64"
tokio = { version = "1.38.0", default-features = false }
toml = "0.5.0"
walkdir = "2.4.0"

[workspace.lints.rust]
# Will be expanded as needed

[workspace.lints.clippy]
# Guidelines
dbg_macro = "deny"
print_stdout = "deny"
allow-dbg-in-tests = "allow"
clone_on_ref_ptr = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"
pedantic = { level = "deny", priority = -1 }
module_inception = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
needless_for_each = "allow"
new_without_default = "allow"
missing_panics_doc = "allow"
inconsistent_struct_constructor = "allow"
single_match = "allow"
single_match_else = "allow"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "symbols"

[profile.release-debug]
debug = true
inherits = "release"

[profile.release-wasi]
codegen-units = 16
debug = 'full'
inherits = "release"
lto = "thin"
opt-level = "z"
strip = "none"
