[package]
name = "sublime_cli_tools"
description = "CLI application for workspace node tools"
documentation = "https://docs.rs/sublime_cli"
readme = "README.md"
keywords = ["cli", "nodejs", "workspace", "tools"]
categories = ["development-tools", "command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "workspace"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Core CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "time"] }

# Terminal & UI
crossterm = "0.29"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
indicatif = "0.18"
comfy-table = "7.2"
fuzzy-matcher = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Date/time
chrono = { workspace = true }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
terminal_size = "0.4"
clap_complete = "4.5"
sysexits = "0.10"
regex = "1.11"

# Internal crates
sublime_standard_tools.workspace = true
sublime_git_tools.workspace = true
sublime_pkg_tools.workspace = true

[dev-dependencies]
tempfile = "3.8.1"
