[package]
name = "ws-monorepo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
ws-std = { version = "~0.1.0", path = "../standard" }
ws-git = { version = "~0.1.0", path = "../git" }
ws-pkg = { version = "~0.1.0", path = "../pkg" }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
git-cliff-core = "2.6.1"
toml = "^0.5"
itertools = "0.13.0"
wax = { version = "0.6.0", features = ["walk"] }
chrono = "0.4.38"
icu = "1.5.0"
