[package]
name = "sublime_node_tools"
version = "0.1.0"
description = "Napi bindings for NodeJs"
documentation = "https://docs.rs/sublime_node_tools"
readme = "README.md"
keywords = ["nodejs", "npm", "napi", "bindings", "native", "ffi"]
categories = ["development-tools", "command-line-utilities"]

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib"]
doctest = false

[lints.clippy]
bind_instead_of_map = "allow"

[dependencies]
sublime_standard_tools = { workspace = true }

serde_json = { workspace = true }
semver = { version = "1.0.23", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
napi = { version = "3.0.0-beta.1", features = [
  "async",
  "anyhow",
  "napi9",
  "serde-json",
  "tokio_rt",
] }
napi-build = { version = "2.1.6" }
napi-derive = { version = "3.0.0-alpha.29", default-features = false, features = [
  "type-def",
] }
ctor = { version = "0.4.0" }
parking_lot = { version = "0.12.1" }

[build-dependencies]
napi-build = { version = "2.1.6" }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "freebsd"), not(target_family = "wasm")))'.dependencies]
mimalloc = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
mimalloc = { workspace = true, features = ["local_dynamic_tls"] }

[dev-dependencies]
reqwest = "0.11"
tempfile = "3.8.0"
