[package]
name = "sublime_package_tools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A robust library for managing Node.js packages, dependency graphs, and version handling in Rust"
documentation = "https://docs.rs/sublime_package_tools"
readme = "README.md"
keywords = ["nodejs", "package", "dependency", "semver", "graph"]
categories = ["development-tools", "parsing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
petgraph = "0.6.5"
semver = { version = "1.0.23", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
flate2 = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.8.0"
sublime_standard_tools = { workspace = true }
mockito = "1.7.0"
tokio-test = "0.4"

[features]
default = ["async"]
async = ["tokio", "async-trait"]
# Optional blocking compatibility (deprecated)
blocking = ["reqwest/blocking"]
