[package]
name = "sublime_pkg_tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Package and version management toolkit for Node.js projects with changeset support"
documentation = "https://docs.rs/sublime_pkg_tools"
keywords = ["package-management", "versioning", "monorepo", "nodejs", "changesets"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Internal dependencies
sublime_git_tools.workspace = true
sublime_standard_tools.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time for changesets
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Logging
log.workspace = true

# Regex for conventional commit parsing
regex.workspace = true

# Semantic versioning
semver = { version = "1.0", features = ["serde"] }

# HTTP client for registry
reqwest = { version = "0.12", features = ["json"] }

# Graph algorithms for dependency analysis
petgraph = "0.6"

# UUID for changeset IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Path utilities
path-clean = "1.0"

# Directory utilities
dirs = "5.0"

# Base64 encoding for registry auth
base64 = "0.21"

# Async trait for trait objects
async-trait = "0.1"

# Futures utilities
futures = "0.3"

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
proptest = "1.4"
pretty_assertions = "1.4"
