[package]
name = "sublime_standard_tools"
version = "0.1.0"
description = "A collection of utilities for working with Node.js projects from Rust applications"
documentation = "https://docs.rs/sublime_standard_tools"
readme = "README.md"
keywords = ["nodejs", "npm", "package-manager", "command", "project"]
categories = ["development-tools", "command-line-utilities"]

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }

# Async runtime and utilities
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.7"
humantime-serde = "1.1"

# Filesystem utilities
walkdir = { workspace = true }
glob = "0.3"
package-json = "0.5.0"

# Logging and diagnostics
log = { workspace = true }

# Validation
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
